log
Wed 27 Mar 2024 05:47:51 PM UTC: 
 tests:  0|6
total_score: 0/70
a487349
Wed 27 Mar 2024 05:58:01 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:10: error: unused variable ‘new’ [-Werror=unused-variable]
   33 |   List * new = (List *) malloc (sizeof(List));
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
9d09888
Wed 27 Mar 2024 05:58:54 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
d4a3767
Wed 27 Mar 2024 05:59:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
99cc190
Wed 27 Mar 2024 06:01:29 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:12: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   43 |   if (list -> size == 0)
      |            ^~
Compilation failed
c87079e
Wed 27 Mar 2024 06:01:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d17c787
Wed 27 Mar 2024 06:02:09 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
503ce71
Wed 27 Mar 2024 06:02:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5f1056d
